--- a/package.json
+++ b/package.json
@@ -39,5 +39,14 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  }
+  },
+  "keywords": [
+    "next",
+    "template",
+    "tmpl",
+    "literal",
+    "es6",
+    "es5",
+    "js"
+  ]
 }
